[package]
name = "treexml"
version = "0.6.2"
description = "An XML tree library for Rust"
keywords = ["xml", "parse", "tree"]
repository = "https://github.com/rahulg/treexml-rs"
documentation = "https://docs.rs/treexml/"
readme = "README.md"
license = "MIT"
authors = ["Rahul AG <r@hul.ag>"]

[dependencies]
xml-rs = "0.6"
failure = "0.1"
