[package]
name = "treexml"
version = "0.7.0"
description = "An XML tree library for Rust"
keywords = ["xml", "parse", "tree"]
repository = "https://github.com/rahulg/treexml-rs"
documentation = "https://docs.rs/treexml/"
readme = "README.md"
license = "MIT"
authors = ["Rahul AG <r@hul.ag>"]

[dependencies]
xml-rs = "0.8"
failure = "0.1"
indexmap = "1.0.1"
