[package]
name = "treexml"
version = "0.7.0"
description = "An XML tree library for Rust"
keywords = ["xml", "parse", "tree"]
repository = "https://github.com/rahulg/treexml-rs"
documentation = "https://docs.rs/treexml/"
readme = "README.md"
license = "MIT"
authors = ["Rahul AG <r@hul.ag>"]
edition = "2018"

[dependencies]
xml-rs = "0.8"
thiserror = "1.0"
indexmap = "1.3"
